mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_var_type.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Expected expression, found end of input
--> test_scripts/error_cases/parser_missing_var_type.mux:2:8
   |
 2 | auto y =
   |        ^
